2008-06-05  Yen-Ju Chen <yjchenx gmail>

	* UUID:
	  Update to 1.6.1 with Quentin's fix on uuid_dce_to_string (uuid_dce.c)
	  It passes all tests.

2008-05-16  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSString.h:
	* Source/NSString.m:
	(-appendString:, -appendPath:): Deprecated.
	* Headers/NSURL.h:
	* Source/NSURL.m:
	(-appendPath:): Deprecated.
	(-URLByAppendingPath:): New replacement method for -appendPath:.

2008-04-29  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Macros.h: Inserted 'unused' attribute to disable warnings when the 
	header is imported.

2008-04-28  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETUUID.h: Made conform to NSCopying.
	* Source/ETUUID.m (-copyWithZone:): Added.

2008-04-23  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETObjectChain.h:
	* Headers/ETFilter.h:
	* Source/ETObjectChain.m:
	* Source/ETFilter.m:
	(-initWithCollection:): Renamed -initWithObjects: to be more inline with 
	usual OpenStep terminology and avoid conflicts with the identically named 
	methods taking a variable number of args.
	(-_buildLinkedListWithCollection:): Renamed -_buildLinkedListWithObjects: 
	to match the previous change.

2008-04-23  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETCollection.h:
	* Source/ETCollection.m:
	(-[NSArray contentArray]): Modified to return a new instance that can be 
	mutated without worrying about the state of the original one.

2008-04-22  Quentin Mathe <qmathe@club-internet.fr>

	* Source/NSInvocation+Etoile.m: Fixed missing selector in built invocation. 

2008-04-21  Quentin Mathe <qmathe@club-internet.fr>

	Refactored UUID tests. All tests pass. 
	* UUID/uuid_dce.c (uuid_dce_to_string): Fixed str parameter wronly passed 
	byref to uuid_export().
	* Source/ETUUID.m:
	Polished the code a bit.
	(-isEqual:): Modified to use uuid_equal() instead of uuid_compare().
	* Source/TestUUID.m: Extended to test the new ETUUID class and the 
	DCE-compatible API.
	* Source/GNUmakefile:
	* GNUmakefile: